feat: added activation code feature
