# src/controllers/auth.controller.ts
@@ -11,7 +11,27 @@ const registerSchema = Yup.object({
     fullName: Yup.string().required(),
     userName: Yup.string().required(),
     email: Yup.string().email().required(),
-    password: Yup.string().required(),
+    password: Yup.string()
+        .required()
+        .min(6, "Password must be at least 6 characters")
+        .test(
+            "at-least-one-uppercase-letter",
+            "Contains at least one uppercase letter",
+            (value) => {
+                if (!value) return false;
+                const regex = /^(?=.*[A-Z])/;
+                return regex.test(value);
+            },
+        )
+        .test(
+            "at-least-one-number",
+            "Contains at least one number",
+            (value) => {
+                if (!value) return false;
+                const regex = /^(?=.*\d)/;
+                return regex.test(value);
+            },
+        ),
     confirmPassword: Yup.string()
         .required()
         .oneOf([Yup.ref("password"), ""], "Passwords not match"),
@@ -21,6 +41,10 @@ export default {
     async register(req: Request, res: Response) {
         /**
          #swagger.tags=["Auth"]
+         #swagger.requestBody= {
+         required: true,
+         schema: {$ref : "#/components/schemas/RegisterRequest"}
+         }
          */
         const { fullName, userName, email, password, confirmPassword } =
             req.body as unknown as Register;
@@ -74,6 +98,7 @@ export default {
                         userName: identifier,
                     },
                 ],
+                isActive: true,
             });
 
             if (!userByIdentifier) {
@@ -126,6 +151,42 @@ export default {
             res.status(200).json({
                 message: "Success get user data",
                 data: result,
+            });
+        } catch (error) {
+            const err = error as unknown as Error;
+            res.status(400).json({
+                message: err.message,
+                data: null,
+            });
+        }
+    },
+    async activation(req: Request, res: Response) {
+        /**
+         #swagger.tags = ["Auth"]
+         #swagger.requestBody = {
+         required: true,
+         schema : {$ref : "#/components/schemas/ActivationRequest"}
+         }
+
+         */
+        try {
+            const { code } = req.body as { code: string };
+
+            const user = await UserModel.findOneAndUpdate(
+                {
+                    activationCode: code,
+                },
+                {
+                    isActive: true,
+                },
+                {
+                    new: true,
+                },
+            );
+
+            res.status(200).json({
+                message: "User successfully activated",
+                data: user,
             });
         } catch (error) {
             const err = error as unknown as Error;
